--- a/src/Component/Layout.css
+++ b/src/Component/Layout.css
@@ -9,6 +9,14 @@
 .border-radius{
     border-radius: 25%;
 }
+.h1{
+    color: hsl(0, 7%, 94%);
+font-family: arial, sans-serif;
+font-size: 16px;
+font-weight: bold;
+margin-top: 0px;
+margin-bottom: 1px;
+}
 /*  ////////// */
 
 
@@ -19,7 +27,7 @@
 .nav-link{
     font-weight: 600;
     border-radius: 5px;
-    text-decoration-color: #000;
+  
 }
 .bg-image{
  background-image: url("https://res.cloudinary.com/dpnselvgk/image/upload/v1682129720/estate-agency/l1zbkrahgrci00epdfc7.jpg");
@@ -132,9 +140,9 @@
     background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,195,233,1) 44%, rgba(148,187,233,1) 80%);
     
 }
-.login-bg-image{
+/* .login-bg-image{
  
-}
+} */
 .about_slide{
     margin-top: 100px;
 }
@@ -209,3 +217,33 @@
     background-position: center;
     background-size: 70%;
   }
+  /* txt over image */
+  .text-block {
+    position: absolute;
+    bottom: 200px;
+    /* right: 20px; */
+    /* background-color: black; */
+    color: white;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  /* ///////////// */
+  .img1{
+    position: relative;
+    margin-bottom: 200px;
+  }
+  .image2{
+    position:absolute;
+    left: 240px;
+    bottom: -180px;
+}
+.btn{
+    position:absolute;
+    left: 270px;
+    bottom: 150px;
+}
+.head{
+    position:absolute;
+    left: 400px;
+    bottom: 370px;
+}
